update style.css: adding padding-bottom:20px to 'content' to make sure the last 20px part of content won't be overlaped by footer

--- a/assets/themes/solar/css/style.css
+++ b/assets/themes/solar/css/style.css
@@ -128,6 +128,7 @@ h3 {
     /*scenario:under 'Archieve', you will find that some post'links will be overlapped by 'canvas'*/
         /*make that link un cliclable*/
         /*that's why we set 'z-index' greatter than #myCanvas*/
+        padding-bottom: 20px;
 }
 
 #footer {
